--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blogApp
 spring.datasource.username=root
-spring.datasource.password=*
+spring.datasource.password=punitive_1729
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
